--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 
-name = "example"
+name = "pencil-example"
 version = "0.0.1"
 authors = ["Shipeng Feng <fsp261@gmail.com>"]
+
+[dependencies.pencil]
+path = ".."
