--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
+sudo: false
 language: rust
-
-install:
-  - curl https://static.rust-lang.org/rustup.sh | sudo bash
+rust:
+  - stable
 
 script:
   - make test
