--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -6,3 +6,7 @@ authors = ["Shipeng Feng <fsp261@gmail.com>"]
 
 [dependencies.pencil]
 path = "../.."
+
+[dependencies]
+log = "*"
+env_logger = "*"
