--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,13 @@ documentation = "http://fengsp.github.io/pencil/"
 description = "A microframework for Rust."
 
 [dependencies]
-hyper = "*"
-regex = "*"
-rustc-serialize = "*"
-url = "*"
-log = "*"
-formdata = "*"
-handlebars = "0.12.1"
-typemap = "*"
-mime = "*"
-mime_guess = "*"
+hyper = "~0.7.2"
+regex = "~0.1.55"
+rustc-serialize = "~0.3.18"
+url = "~0.5.5"
+log = "~0.3.5"
+formdata = "~0.7.9"
+handlebars = "~0.15.0"
+typemap = "~0.3.3"
+mime = "~0.1.3"
+mime_guess = "~1.5.0"
