--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ handlebars = "~0.15.0"
 typemap = "~0.3.3"
 mime = "~0.1.3"
 mime_guess = "~1.5.0"
+
+[dependencies.clippy]
+optional = true
+version = "^0.*"
