--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pencil"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Shipeng Feng <fsp261@gmail.com>"]
 keywords = ["web", "framework"]
 license = "BSD-3-Clause"
@@ -8,16 +8,16 @@ readme = "README.md"
 repository = "https://github.com/fengsp/pencil"
 homepage = "https://github.com/fengsp/pencil"
 documentation = "http://fengsp.github.io/pencil/"
-description = "A microframework for Rust."
+description = "A micro web framework for Rust."
 
 [dependencies]
-hyper = "~0.7.2"
-regex = "~0.1.55"
-rustc-serialize = "~0.3.18"
-url = "~0.5.5"
-log = "~0.3.5"
-formdata = "~0.7.9"
-handlebars = "~0.15.0"
-typemap = "~0.3.3"
-mime = "~0.1.3"
-mime_guess = "~1.5.0"
+hyper = "0.7.2"
+regex = "0.1.58"
+rustc-serialize = "0.3.18"
+url = "0.5.7"
+log = "0.3.5"
+formdata = "0.7.9"
+handlebars = "0.15.0"
+typemap = "0.3.3"
+mime = "0.1.3"
+mime_guess = "=1.5.0"
