--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ documentation = "http://fengsp.github.io/pencil/"
 description = "A micro web framework for Rust."
 
 [dependencies]
-hyper = "0.7.2"
+hyper = "0.8.0"
 regex = "0.1.58"
 rustc-serialize = "0.3.18"
 url = "0.5.7"
@@ -19,5 +19,5 @@ log = "0.3.5"
 formdata = "0.7.9"
 handlebars = "0.15.0"
 typemap = "0.3.3"
-mime = "0.1.3"
-mime_guess = "=1.5.0"
+mime = "0.2.0"
+mime_guess = "1.6.0"
