--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,25 @@ homepage = "https://github.com/fengsp/pencil"
 documentation = "http://fengsp.github.io/pencil/"
 description = "A micro web framework for Rust."
 
+[features]
+default = ["ssl"]
+ssl = ["hyper/ssl", "formdata/ssl"]
+
 [dependencies]
-hyper = "0.9.4"
 regex = "0.1.69"
 rustc-serialize = "0.3.19"
 url = "1.1.0"
 log = "0.3.6"
-formdata = "0.8.2"
 handlebars = "0.16.0"
 typemap = "0.3.3"
 mime = "0.2.0"
 mime_guess = "1.6.1"
+
+[dependencies.hyper]
+version = "0.9.4"
+default_features = false
+
+[dependencies.formdata]
+version = "0.8.2"
+default_features = false
+features = ["rust-stable"]
