Use serde and serde_json instead of rustc_serialize.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,14 @@ ssl = ["hyper/ssl", "formdata/ssl"]
 
 [dependencies]
 regex = "0.1.77"
-rustc-serialize = "0.3.19"
 url = "1.2.1"
 log = "0.3.6"
-handlebars = "0.16.1"
+handlebars = { version = "0.21", features = ["serde_type"] }
 typemap = "0.3.3"
 mime = "0.2.2"
 mime_guess = "1.8.0"
+serde = "0.8"
+serde_json = "0.8"
 
 [dependencies.hyper]
 version = "0.9.10"
